# python-github-actions-sample

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml  pytest.yml  test_and_format_check.yml
tasklist/: __init__.py  __main__.py  tasklist.py
tasklist/mgr/: task_mgr.py
tests/: test_task_mgr.py  test_tasklist.py
